# homework_14

./: README.md  pyproject.toml
src/: category.py  category_iterator.py  main.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py  test_utils.py
